# iot-manager

./: .gitignore  README.md  main.py  pyproject.toml
classes/: devices.py  dwelling.py  hub.py  iot_manager.py
tests/: test_devices.py  test_dwelling.py  test_hub.py  test_iot_manager.py
